[gd_scene load_steps=26 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Parede.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Chao.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Porta.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Externo.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Cenario/Cemiterio/Escada.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Cenario/Dungeon/Parede.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Cenario/Dungeon/Chao.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Cenario/Dungeon/Porta.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Cenario/Dungeon/Externo.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Cenario/Dungeon/Escada.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Cenario/Visibilidade/Preto.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Seres/Player.png" type="Texture" id=13]
[ext_resource path="res://Sprites/UI/UiPlayer.png" type="Texture" id=14]
[ext_resource path="res://Sprites/UI/Ui_AlmaGrande.png" type="Texture" id=15]
[ext_resource path="res://Sprites/UI/oie_transparent.png" type="Texture" id=16]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=7]
0/name = "Parede.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "Chao.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shapes = [  ]
1/z_index = 0
2/name = "Porta.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "Externo.png 3"
3/texture = ExtResource( 5 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "Escada.png 4"
4/texture = ExtResource( 6 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shapes = [  ]
4/z_index = 0
5/name = "Parede.png 5"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 0, 0, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "Chao.png 6"
6/texture = ExtResource( 8 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 0, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shapes = [  ]
6/z_index = 0
7/name = "Porta.png 7"
7/texture = ExtResource( 9 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 0, 0, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0
8/name = "Externo.png 8"
8/texture = ExtResource( 10 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 0, 0, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
8/z_index = 0
9/name = "Escada.png 9"
9/texture = ExtResource( 11 )
9/tex_offset = Vector2( 0, 0 )
9/modulate = Color( 1, 1, 1, 1 )
9/region = Rect2( 0, 0, 32, 32 )
9/tile_mode = 0
9/occluder_offset = Vector2( 0, 0 )
9/navigation_offset = Vector2( 0, 0 )
9/shapes = [  ]
9/z_index = 0

[sub_resource type="TileSet" id=8]
0/name = "Preto.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shapes = [  ]
0/z_index = 0

[sub_resource type="GDScript" id=9]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Mapa" type="TileMap" parent="."]
tile_set = SubResource( 7 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Visibilidade" type="TileMap" parent="."]
tile_set = SubResource( 8 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="Player" type="Sprite" parent="."]
position = Vector2( 302.123, 166.131 )
texture = ExtResource( 13 )
centered = false
hframes = 2
frame = 1
script = SubResource( 9 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 16, 16 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Lose" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = 10.0
margin_bottom = 7.0
rect_scale = Vector2( -92.2994, -60.2024 )
color = Color( 1, 0.0117647, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="ColorRect" parent="CanvasLayer"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 1.0
margin_right = 10.0
margin_bottom = 7.0
rect_scale = Vector2( -92.2994, -60.2024 )
color = Color( 0, 1, 0, 0.509804 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FundoHP" type="ColorRect" parent="CanvasLayer"]
margin_left = 74.0
margin_top = 312.0
margin_right = 222.0
margin_bottom = 335.0
color = Color( 0, 0, 0, 1 )

[node name="HP" type="ColorRect" parent="CanvasLayer"]
margin_left = 72.0
margin_top = 311.0
margin_right = 220.0
margin_bottom = 335.0
color = Color( 0.290196, 1, 0, 1 )

[node name="UiPlayer" type="Sprite" parent="CanvasLayer"]
position = Vector2( 114, 320.15 )
texture = ExtResource( 14 )
hframes = 5

[node name="Alma1" type="Sprite" parent="CanvasLayer"]
position = Vector2( 79.8779, 350 )
texture = ExtResource( 15 )
offset = Vector2( -39.4629, -32.8418 )
hframes = 5
frame = 1

[node name="Alma2" type="Sprite" parent="CanvasLayer"]
position = Vector2( 80, 350 )
texture = ExtResource( 16 )
offset = Vector2( -5.00255, -5.41876 )
hframes = 5
frame = 1

[node name="Alma3" type="Sprite" parent="CanvasLayer"]
position = Vector2( 80, 350 )
texture = ExtResource( 16 )
offset = Vector2( 8.03479, -5.26178 )
hframes = 5
frame = 1

[node name="Alma4" type="Sprite" parent="CanvasLayer"]
position = Vector2( 80, 350 )
texture = ExtResource( 16 )
offset = Vector2( 21.0509, -5.41876 )
hframes = 5
frame = 1

[node name="Alma5" type="Sprite" parent="CanvasLayer"]
position = Vector2( 80, 350 )
texture = ExtResource( 16 )
offset = Vector2( 34.0882, -5.26178 )
hframes = 5
frame = 1

[node name="Alma6" type="Sprite" parent="CanvasLayer"]
position = Vector2( 131.946, 350 )
texture = ExtResource( 16 )
offset = Vector2( -5.00255, -5.41876 )
hframes = 5
frame = 1

[node name="Alma7" type="Sprite" parent="CanvasLayer"]
position = Vector2( 118.96, 350 )
texture = ExtResource( 16 )
offset = Vector2( 21.0509, -5.41876 )
hframes = 5
frame = 1

[node name="Alma8" type="Sprite" parent="CanvasLayer"]
position = Vector2( 118.96, 349.865 )
texture = ExtResource( 16 )
offset = Vector2( 34.0882, -5.26178 )
hframes = 5
frame = 1

[node name="Alma9" type="Sprite" parent="CanvasLayer"]
position = Vector2( 158.054, 349.865 )
texture = ExtResource( 16 )
offset = Vector2( 8.03479, -5.26178 )
hframes = 5
frame = 1

[node name="Alma10" type="Sprite" parent="CanvasLayer"]
position = Vector2( 171.041, 349.865 )
texture = ExtResource( 16 )
offset = Vector2( 8.03479, -5.26178 )
hframes = 5
frame = 1
